--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>DLsite商品ページへ移動中...</title>
+  <title>DLsite「公園少女〜私たちとナニして遊ぶ？〜」販売ページへ</title>
 
   <!-- GA4タグ -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-DVW1ECSDSR"></script>
